// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FLPInput /> > should render as expected 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;
    {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
    {let k=y==="class",S=k&&a?m.map(f=&gt;
    a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="d_flex flex-d_column gap_2"
  >
    <label
      for="Test"
    >
      Test
    </label>
    <div>
      <div
        class="css-1op6ogi"
      >
        <input
          class="chakra-input css-ee9xfg"
          id="Test"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with error 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;
    {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
    {let k=y==="class",S=k&&a?m.map(f=&gt;
    a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="d_flex flex-d_column gap_2"
  >
    <label
      for="Test"
    >
      Test
    </label>
    <div>
      <div
        class="css-1op6ogi"
      >
        <input
          class="chakra-input css-ee9xfg"
          id="Test"
        />
        <span
          class="c_red.500 fw_bold"
        >
          Error
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with value 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;
    {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
    {let k=y==="class",S=k&&a?m.map(f=&gt;
    a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="d_flex flex-d_column gap_2"
  >
    <label
      for="Test"
    >
      Test
    </label>
    <div>
      <div
        class="css-1op6ogi"
      >
        <input
          class="chakra-input css-ee9xfg"
          id="Test"
          value="Value"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with value and error 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;
    {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
    {let k=y==="class",S=k&&a?m.map(f=&gt;
    a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="d_flex flex-d_column gap_2"
  >
    <label
      for="Test"
    >
      Test
    </label>
    <div>
      <div
        class="css-1op6ogi"
      >
        <input
          class="chakra-input css-ee9xfg"
          id="Test"
          value="Value"
        />
        <span
          class="c_red.500 fw_bold"
        >
          Error
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected without a label 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;
    {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
    {let k=y==="class",S=k&&a?m.map(f=&gt;
    a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="d_flex flex-d_column gap_2"
  >
    <label
      for="Test"
      hidden=""
    >
      Test
    </label>
    <div>
      <div
        class="css-1op6ogi"
      >
        <input
          class="chakra-input css-ee9xfg"
          id="Test"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render elements as a row 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;
    {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
    {let k=y==="class",S=k&&a?m.map(f=&gt;
    a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="d_flex flex-d_row ai_center gap_4"
  >
    <label
      for="Test"
    >
      Test
    </label>
    <div>
      <div
        class="css-1op6ogi"
      >
        <input
          class="chakra-input css-ee9xfg"
          id="Test"
        />
      </div>
    </div>
  </div>
</div>
`;
